<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <POU Name="FB_Module_CoilPusher" Id="{8e8d1dee-ebd9-4fec-b79d-3fb510dceae4}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_Module_CoilPusher IMPLEMENTS I_Module
VAR_INPUT
	bEnable		: BOOL;
END_VAR
VAR_OUTPUT
END_VAR
VAR
	Components	: ARRAY [0..1] OF I_Component;
	
	fbServo		: FB_Component_ServoMotor;
	fbSensor	: FB_Component_InductiveSensor;
	
	idx			: INT;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF bEnable THEN
	fbServo(
		bEnable 			:= TRUE, 
		bHomingSensor 		:= GVL.bCoilTranslate, 
		bHomingSpeed 		:= 0, 
		uMaxRPM 			:= 3000,
		bSetCounterDone		:= GVL.bSetCounterDoneServo1,
		rGearRatio			:= 1,
		dCountServo			:= GVL.dCountServo1,
		bSetCounter			:= GVL.dSetCounterServo1,
		dSetCounterValue	:= GVL.dSetCounterValueServo1,
		bEnableDrive 		:= GVL.b603Enable, 
		uAnalogOut 			:= GVL.aOutServo1);
	
	fbSensor(
		bRawSignal			:= GVL.bCoilTranslate,
		tDebounce			:= T#5MS,
		tTimeout			:= T#5MS,
		sName				:= 'translate coil sens',
		bEnable				:= TRUE);
	
	Components[0]	:= fbServo;
	Components[1]	:= fbSensor;
	
	FOR idx := 0 TO 1 DO
    	Components[idx].M_Start();
	END_FOR;
END_IF]]></ST>
    </Implementation>
    <Method Name="M_Extend" Id="{2b1df13a-2b1d-4b0a-acb6-5cb20add145c}">
      <Declaration><![CDATA[METHOD M_Extend : BOOL
VAR_INPUT
	uPos	: INT;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF bEnable THEN
	M_Extend := fbServo.M_Goto(30000, 2, 500);
END_IF]]></ST>
      </Implementation>
    </Method>
    <Method Name="M_Halt" Id="{58ed4357-7aac-4b0b-a942-3662baab7bcf}">
      <Declaration><![CDATA[{warning 'add method implementation '}
METHOD M_Halt : BOOL
]]></Declaration>
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Method>
    <Method Name="M_Home" Id="{2547e027-85d7-4928-ad7f-ba321c02857c}">
      <Declaration><![CDATA[METHOD M_Home : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF bEnable THEN
	IF fbSensor.bSensorActive THEN
		fbServo.M_SetSpeed(0);
		fbServo.M_DisableDrive();
		IF fbServo.M_SetCounter(0) THEN
			M_Home := TRUE;
		END_IF
	ELSE
		fbServo.M_EnableDrive();
		fbServo.M_SetSpeed(-2);
	END_IF
END_IF]]></ST>
      </Implementation>
    </Method>
    <Method Name="M_Start" Id="{5de6f7fa-b867-4cfe-b380-2067954c8bd8}">
      <Declaration><![CDATA[{warning 'add method implementation '}
METHOD M_Start : BOOL
]]></Declaration>
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Method>
    <Method Name="M_Stop" Id="{33e9907a-70e6-4926-9b25-8911ec5525b0}">
      <Declaration><![CDATA[{warning 'add method implementation '}
METHOD M_Stop : BOOL
]]></Declaration>
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="FB_Module_CoilPusher">
      <LineId Id="9" Count="0" />
      <LineId Id="17" Count="6" />
      <LineId Id="46" Count="0" />
      <LineId Id="24" Count="2" />
      <LineId Id="13" Count="0" />
      <LineId Id="27" Count="0" />
      <LineId Id="36" Count="0" />
      <LineId Id="28" Count="0" />
      <LineId Id="30" Count="1" />
      <LineId Id="33" Count="1" />
      <LineId Id="37" Count="2" />
      <LineId Id="42" Count="0" />
      <LineId Id="44" Count="1" />
      <LineId Id="43" Count="0" />
      <LineId Id="14" Count="0" />
    </LineIds>
    <LineIds Name="FB_Module_CoilPusher.M_Extend">
      <LineId Id="5" Count="0" />
      <LineId Id="7" Count="1" />
    </LineIds>
    <LineIds Name="FB_Module_CoilPusher.M_Halt">
      <LineId Id="4" Count="0" />
    </LineIds>
    <LineIds Name="FB_Module_CoilPusher.M_Home">
      <LineId Id="5" Count="1" />
      <LineId Id="13" Count="0" />
      <LineId Id="20" Count="0" />
      <LineId Id="16" Count="0" />
      <LineId Id="19" Count="0" />
      <LineId Id="18" Count="0" />
      <LineId Id="10" Count="1" />
      <LineId Id="15" Count="0" />
      <LineId Id="9" Count="0" />
      <LineId Id="7" Count="0" />
    </LineIds>
    <LineIds Name="FB_Module_CoilPusher.M_Start">
      <LineId Id="4" Count="0" />
    </LineIds>
    <LineIds Name="FB_Module_CoilPusher.M_Stop">
      <LineId Id="4" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>